Add query to fetch a page of reviews for a given book
