# api/internal/reviews/dto.go
@@ -1,0 +1,8 @@
+package reviews
+
+import "bs-books-api/internal/delivery/request"
+
+type ReviewListingRequest struct {
+	BookID       string `json:"book_id"`
+	PagedRequest request.PagedRequest
+}
